# KalmanFilter

./: .gitignore  CMakeLists.txt  useful_commands.txt
data/: filtered_state_file.csv  noisy_state_file.csv  true_state_file.csv
math/: kalman_filter.cpp  kalman_filter.hpp  matrix.cpp  matrix.hpp
model/: model.hpp
src/: main_file.cpp
util/: file.hpp
